# Federated-Finetuning

./: .gitignore  README.md  pyproject.toml  subspace_alignment_and_inverse_framework_v2.html
apps/glue-nlu/: pyproject.toml
apps/glue-nlu/src/glue_nlu/: __init__.py  client_app.py  dataset.py  models.py  server_app.py
apps/llm-gsm8k/: pyproject.toml
apps/llm-gsm8k/src/llm_gsm8k/: __init__.py  client_app.py  dataset.py  eval_gsm8k.py  server_app.py
apps/llm-humaneval/: pyproject.toml
apps/llm-humaneval/src/llm_humaneval/: __init__.py  client_app.py  dataset.py  eval_humaneval.py  server_app.py
experiments/: aggregate_glue_results.py  aggregate_gsm8k_results.py  aggregate_humaneval_results.py  env.sh  run_glue_experiment.sh  run_glue_n50_experiment.sh  run_gsm8k_experiment.sh  run_humaneval_experiment.sh
src/: fine-tune-local.py
src/fedbench_common/: __init__.py  client_helpers.py  metrics.py  partitioners.py  quant_error.py  resultio.py  subspace_metrics.py
src/flowertune_llm/: client_app.py  models.py  peft_layers.py  server_app.py
src/flowertune_llm/strategies/: __init__.py  common.py  fedit.py  fedora.py  fedrot.py  fedsvd.py  ffalora.py  flora.py  rolora.py
tests/unit/: test_strategy.py
